test_src/compiler_errors/vars/UndefinedVarError3.b
class UndefinedVarError3 {
    void test() {
        {
            var i = 0;
            println(i);
        }
        println(i);
    }
}
